syntax = "proto3";

package errors;

import "errors/errors.proto";
option go_package = "errors/;errors";

enum ErrorReason {
  // Default error code option
  option (errors.default_code) = 500;

  // Common errors (0-999)
  SystemError = 0 [(errors.message) = "系统错误"];
  FileSystemError = 1 [(errors.message) = "文件系统错误"];
  NetWorkError = 2 [(errors.message) = "网络传输错误"];
  DatabaseError = 3 [(errors.message) = "数据库错误"];
  ParamsError = 4 [(errors.message) = "参数错误"];
  TransformError = 5 [(errors.message) = "数据转换失败"];
  GetError = 6 [(errors.message) = "获取数据失败"];
  ListError = 7 [(errors.message) = "获取列表数据失败"];
  CreateError = 8 [(errors.message) = "创建数据失败"];
  ImportError = 9 [(errors.message) = "导入数据失败"];
  ExportError = 10 [(errors.message) = "导出数据失败"];
  UpdateError = 11 [(errors.message) = "更新数据失败"];
  DeleteError = 12 [(errors.message) = "删除数据失败"];

  // Config service errors (1000-1999)
  ConfigServiceError = 1000 [(errors.message) = "配置服务异常"];
  GetTrashError = 1001 [(errors.message) = "获取回收站数据失败"];
  ListTrashError = 1002 [(errors.message) = "获取回收站列表数据失败"];
  DeleteTrashError = 1003 [(errors.message) = "删除回收站数据失败"];
  RevertTrashError = 1004 [(errors.message) = "还原回收站数据失败"];
  BusinessValueTypeError = 1005 [(errors.message) = "业务配置值类型错误"];
  ResourceValueTypeError = 1006 [(errors.message) = "资源配置值类型错误"];
  RenderTemplateError = 1007 [(errors.message) = "渲染模板错误"];
  TemplateVersionExistError = 1008 [(errors.message) = "模板已存在此版本"];
  ServerNotExistTemplateError = 1009 [(errors.message) = "当前服务还未提交过模板"];
  ConfigureVersionExistError = 1010 [(errors.message) = "配置已存在此版本"];
  WatchConfigureError = 1011 [(errors.message) = "监听版本更新失败"];
  TokenAuthError = 1012 [(errors.message) = "token验证失败"];
  ServerNotFound = 1013 [(errors.message) = "服务不存在"];
  PasswordError = 1014 [(errors.message) = "密码错误"];
  PasswordExpireError = 1015 [(errors.message) = "密码已过期"];
  RefreshTokenError = 1016 [(errors.code) = 401, (errors.message) = "刷新token失败"];
  BroadcastConfigureError = 1017 [(errors.message) = "广播配置变更消息失败"];

  // Resource service errors (2000-2999)
  ResourceServiceError = 2000 [(errors.message) = "资源服务异常"];
  NoSupportStoreError = 2001 [(errors.message) = "不支持的存储引擎"];
  NoSupportFileTypeError = 2002 [(errors.message) = "不支持的文件类型"];
  VerifySignError = 2003 [(errors.message) = "签名验证失败"];
  ChunkUploadError = 2004 [(errors.message) = "分片上传失败"];
  StatusProgressError = 2005 [(errors.message) = "文件上传中"];
  UploadFileError = 2006 [(errors.message) = "文件上传失败"];
  InitStoreError = 2007 [(errors.message) = "存储引擎初始化失败"];
  FileFormatError = 2008 [(errors.message) = "文件格式错误"];
  NotExistFileError = 2009 [(errors.message) = "文件不存在"];
  AlreadyExistFileNameError = 2010 [(errors.message) = "文件名已存在"];
  AccessResourceError = 2011 [(errors.message) = "访问资源文件异常"];
  ExportFileNameDupError = 2012 [(errors.message) = "导出文件重命名重复"];
  ExportTaskProcessError = 2013 [(errors.message) = "导出任务正在进行中"];
  ExceedMaxSizeError = 2014 [(errors.message) = "超过允许上传的文件大小"];

  // Manager service errors (3000-3999)
  ManagerServiceError = 3000 [(errors.message) = "管理中心服务异常"];
  DepartmentPurviewError = 3001 [(errors.message) = "无此部门权限"];
  RolePurviewError = 3002 [(errors.message) = "无此角色权限"];
  UserPurviewError = 3003 [(errors.message) = "无此用户权限"];
  MenuPurviewError = 3004 [(errors.message) = "无此菜单权限"];
  EditSystemDataError = 3005 [(errors.message) = "系统数据，不允许修改"];
  GenCaptchaError = 3006 [(errors.message) = "生成验证码失败"];
  SendCaptchaError = 3007 [(errors.message) = "发送验证码失败"];
  DeleteSystemDataError = 3008 [(errors.message) = "系统数据，不允许删除"];
  VerifyCaptchaError = 3009 [(errors.message) = "验证码错误"];
  UsernameFormatError = 3010 [(errors.message) = "用户名格式错误"];
  UsernameNotExistError = 3011 [(errors.message) = "用户不存在"];
  UserDisableError = 3012 [(errors.message) = "用户已被禁用"];
  RoleDisableError = 3013 [(errors.message) = "角色已被禁用"];
  GenTokenError = 3014 [(errors.message) = "token生成失败"];
  ParseTokenError = 3015 [(errors.message) = "token解析失败"];
  ForbiddenError = 3016 [(errors.code) = 403, (errors.message) = "无接口权限"];
  NotPermissionError = 3017 [(errors.message) = "无资源权限"];

  // Usercenter errors (4000-4999)
  UserServiceError = 4000 [(errors.message) = "用户服务异常"];
  GenCaptchaTypeError = 4001 [(errors.message) = "错误的验证码类型"];
  NotExistEmailError = 4002 [(errors.message) = "不存在此邮箱"];
  OAuthLoginError = 4003 [(errors.message) = "三方授权登陆失败"];
  NotUserError = 4004 [(errors.message) = "用户不存在"];
  NotAppScopeError = 4005 [(errors.message) = "用户无应用权限"];
  RsaDecodeError = 4006 [(errors.message) = "rsa解密失败"];
  PasswordFormatError = 4007 [(errors.message) = "密码格式错误"];
  DisableRegisterError = 4008 [(errors.code) = 401, (errors.message) = "应用已关闭注册权限"];
  AlreadyExistEmailError = 4009 [(errors.message) = "邮箱已存在"];
  AlreadyExistUsernameError = 4010 [(errors.message) = "账号已存在"];
  RegisterError = 4011 [(errors.message) = "用户注册失败"];
  BindError = 4012 [(errors.message) = "用户注册失败"];
  LoginError = 4013 [(errors.message) = "登陆失败"];
  ExistFeedbackError = 4014 [(errors.message) = "已存在重复的反馈内容"];
  AlreadyBindError = 4015 [(errors.message) = "该账号已绑定过其他平台，不能重复绑定"];
  AppMaintenanceError = 4016 [(errors.message) = "当前应用正在维护中"];
  ChannelCloseError = 4017 [(errors.message) = "当前渠道已关闭"];
  AppNotBindChannelError = 4018 [(errors.message) = "应用未开通此渠道"];
  ChannelNotBindUserError = 4019 [(errors.message) = "当前授权渠道未绑定用户"];
}
